--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,7 +1,11 @@
-.Person {
+/* .Person {
     width: 60%;
     margin: 16px auto;
     border: 2px solid black;
     padding: 5px;
 
-}
+} */
+
+.Person {
+    color: "pink"
+  }
